--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <div class="login-container">
-    <img src="apeclogo.png" alt="Logo" class="logo" />
+    <img src="apeclogo.jpeg" alt="Logo" class="logo" />
     <h2>Login</h2>
     <form>
       <input type="text" placeholder="Username" required />
