--- a/index.html
+++ b/index.html
@@ -12,50 +12,68 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
     }
     .login-container {
       background-color: #fff;
       padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
       text-align: center;
-      width: 300px;
+      width: 320px;
     }
     .logo {
-      width: 100px;
+      width: 120px;
       margin-bottom: 20px;
+      border-radius: 50%; /* makes the logo circular */
+      background: #fff;
+      padding: 8px;
+    }
+    h2 {
+      margin-bottom: 20px;
+      color: #333;
     }
     input[type="text"],
     input[type="password"] {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 6px;
+      font-size: 14px;
     }
     button {
       width: 100%;
-      padding: 10px;
-      background-color: #0078D4;
+      padding: 12px;
+      background-color: #b80000;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 6px;
       cursor: pointer;
+      font-size: 16px;
+      transition: background 0.3s;
     }
     button:hover {
-      background-color: #005a9e;
+      background-color: #800000;
+    }
+    .footer-text {
+      margin-top: 15px;
+      font-size: 12px;
+      color: #777;
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <img src="logo.jpg" alt="Logo" class="logo" />
+    <!-- Make sure logo.png is in the same folder as index.html -->
+    <img src="logo.jpg" alt="College Logo" class="logo" />
     <h2>Login</h2>
     <form>
       <input type="text" placeholder="Username" required />
       <input type="password" placeholder="Password" required />
       <button type="submit">Login</button>
     </form>
+    <p class="footer-text">Adhiparasakthi Engineering College</p>
   </div>
 </body>
 </html>
