--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <body>
   <div class="login-container">
     <!-- Ensure logo.png is in the same folder -->
-    <img src="logo.png" alt="College Logo" class="logo" />
+    <img src="logo.jpg" alt="College Logo" class="logo" />
     <h2>🔒 Secure Login</h2>
     <form>
       <label for="username">Username</label>
