--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="login-container">
     <!-- Ensure logo.png is in the same folder -->
     <img src="logo.jpg" alt="College Logo" class="logo" />
-    <h2>🔒 Secure Login</h2>
+    <h2>Adhiparasakthi Engineering College</h2>
     <form>
       <label for="username">Username</label>
       <input id="username" type="text" placeholder="Enter username" required />
