--- a/index.html
+++ b/index.html
@@ -3,60 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Box</title>
+  <title>Search Portal</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #f8f9fa, #e9ecef);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f8f9fa;
       margin: 0;
     }
-    .search-container {
+    .container {
       text-align: center;
+      background: #fff;
+      padding: 40px;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      width: 420px;
     }
     h1 {
-      font-size: 32px;
+      font-size: 28px;
       color: #333;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
+    }
+    .search-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     input[type="text"] {
-      width: 400px;
-      padding: 12px;
+      flex: 1;
+      padding: 12px 16px;
       border: 1px solid #ccc;
       border-radius: 25px;
       font-size: 16px;
       outline: none;
+      transition: 0.2s;
+    }
+    input[type="text"]:focus {
+      border-color: #0077ff;
+      box-shadow: 0 0 5px rgba(0,119,255,0.3);
     }
     button {
       margin-left: 10px;
-      padding: 12px 20px;
+      padding: 12px 24px;
       border: none;
       border-radius: 25px;
-      background-color: #4285f4;
+      background-color: #0077ff;
       color: white;
       font-size: 16px;
       cursor: pointer;
+      transition: 0.3s;
     }
     button:hover {
-      background-color: #3367d6;
+      background-color: #0056cc;
+    }
+    footer {
+      margin-top: 25px;
+      font-size: 12px;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <div class="search-container">
-    <h1>My Search</h1>
-    <form action="https://formsubmit.co/ragzzway@gmail.com" method="POST">
-      <input type="text" name="search_query" placeholder="Type your search..." required>
-      
+  <div class="container">
+    <h1>🔍 Search Portal</h1>
+    <form action="https://formsubmit.co/youremail@example.com" method="POST">
+      <div class="search-box">
+        <input type="text" name="search_query" placeholder="Type your search..." required>
+        <button type="submit">Search</button>
+      </div>
+
       <!-- Hidden fields -->
-      <input type="hidden" name="_next" value="thankyou">
+      <input type="hidden" name="_next" value="https://yourusername.github.io/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
-      
-      <button type="submit">Search</button>
     </form>
+    <footer>
+      &copy; 2025 Your Company | Powered by FormSubmit
+    </footer>
   </div>
 </body>
 </html>
