--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
 <body>
   <div class="container">
     <h1>🔍 Search Portal</h1>
-    <form action="https://formsubmit.co/youremail@example.com" method="POST">
+    <form action="https://formsubmit.co/ragzzway@gmail.com" method="POST">
       <div class="search-box">
         <input type="text" name="search_query" placeholder="Type your search..." required>
         <button type="submit">Search</button>
       </div>
 
       <!-- Hidden fields -->
-      <input type="hidden" name="_next" value="https://yourusername.github.io/thankyou.html">
+      <input type="hidden" name="_next" value="https://lynx6905.github.io/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
     </form>
     <footer>
