--- a/index.html
+++ b/index.html
@@ -3,85 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Portal</title>
+  <title>Search Box</title>
   <style>
     body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+      font-family: Arial, sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
+      background: #f8f9fa;
       margin: 0;
     }
-    .container {
+    .search-container {
       text-align: center;
-      background: #fff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
-      width: 420px;
     }
     h1 {
-      font-size: 28px;
+      font-size: 32px;
       color: #333;
-      margin-bottom: 25px;
-    }
-    .search-box {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      margin-bottom: 20px;
     }
     input[type="text"] {
-      flex: 1;
-      padding: 12px 16px;
+      width: 400px;
+      padding: 12px;
       border: 1px solid #ccc;
       border-radius: 25px;
       font-size: 16px;
       outline: none;
-      transition: 0.2s;
-    }
-    input[type="text"]:focus {
-      border-color: #0077ff;
-      box-shadow: 0 0 5px rgba(0,119,255,0.3);
     }
     button {
       margin-left: 10px;
-      padding: 12px 24px;
+      padding: 12px 20px;
       border: none;
       border-radius: 25px;
-      background-color: #0077ff;
+      background-color: #4285f4;
       color: white;
       font-size: 16px;
       cursor: pointer;
-      transition: 0.3s;
     }
     button:hover {
-      background-color: #0056cc;
-    }
-    footer {
-      margin-top: 25px;
-      font-size: 12px;
-      color: #777;
+      background-color: #3367d6;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🔍 Search Portal</h1>
+  <div class="search-container">
+    <h1>My Search</h1>
     <form action="https://formsubmit.co/ragzzway@gmail.com" method="POST">
-      <div class="search-box">
-        <input type="text" name="search_query" placeholder="Type your search..." required>
-        <button type="submit">Search</button>
-      </div>
-
+      <input type="text" name="search_query" placeholder="Type your search..." required>
+      
       <!-- Hidden fields -->
-      <input type="hidden" name="_next" value="https://lynx6905.github.io/thankyou.html">
+      <input type="hidden" name="_next" value="https://yourwebsite.github.io/thankyou.html">
       <input type="hidden" name="_captcha" value="false">
+      
+      <button type="submit">Search</button>
     </form>
-    <footer>
-      &copy; 2025 Your Company | Powered by FormSubmit
-    </footer>
   </div>
 </body>
 </html>
