--- a/index.html
+++ b/index.html
@@ -1,62 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Box</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login & Signup</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f8f9fa;
       margin: 0;
     }
-    .search-container {
+    .container {
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.15);
       text-align: center;
+      width: 340px;
     }
-    h1 {
-      font-size: 32px;
-      color: #333;
+    .logo {
+      width: 120px;
       margin-bottom: 20px;
+      border-radius: 50%;
+      background: #fff;
+      padding: 8px;
     }
-    input[type="text"] {
-      width: 400px;
+    h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+    input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
       padding: 12px;
+      margin: 10px 0;
       border: 1px solid #ccc;
-      border-radius: 25px;
-      font-size: 16px;
-      outline: none;
+      border-radius: 6px;
+      font-size: 14px;
     }
     button {
-      margin-left: 10px;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 25px;
-      background-color: #4285f4;
+      width: 100%;
+      padding: 12px;
+      background-color: #0078D4;
       color: white;
-      font-size: 16px;
+      border: none;
+      border-radius: 6px;
       cursor: pointer;
+      font-size: 16px;
+      transition: background 0.3s;
+      margin-top: 10px;
     }
     button:hover {
-      background-color: #3367d6;
+      background-color: #005a9e;
+    }
+    .footer-text {
+      margin-top: 15px;
+      font-size: 12px;
+      color: #777;
+    }
+    .signup-link {
+      margin-top: 15px;
+      font-size: 14px;
+    }
+    .signup-link a {
+      color: #b80000;
+      text-decoration: none;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .thankyou {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="search-container">
-    <h1>My Search</h1>
-    <form action="https://formsubmit.co/ragzzway@gmail.com" method="POST">
-      <input type="text" name="search_query" placeholder="Type your search..." required>
-      
-      <!-- Hidden fields -->
-      <input type="hidden" name="_next" value="https://yourwebsite.github.io/thankyou.html">
-      <input type="hidden" name="_captcha" value="false">
-      
-      <button type="submit">Search</button>
+  <div class="container" id="form-container">
+    <img src="logo.png" alt="College Logo" class="logo" />
+    <h2 id="form-title">Login</h2>
+
+    <!-- Login Form -->
+    <form id="login-form">
+      <input type="text" placeholder="Username" required />
+      <input type="password" placeholder="Password" required />
+      <button type="submit">Login</button>
     </form>
+
+    <!-- Signup Form -->
+    <form id="signup-form" style="display: none;">
+      <input type="text" placeholder="Full Name" required />
+      <input type="email" placeholder="Email" required />
+      <input type="password" placeholder="Password" required />
+      <button type="submit">Sign Up</button>
+    </form>
+
+    <p class="signup-link" id="toggle-text">
+      Don't have an account? <a onclick="showSignup()">Sign Up</a>
+    </p>
+
+    <p class="footer-text">Adhiparasakthi Engineering College</p>
   </div>
+
+  <!-- Thank You Message -->
+  <div class="container thankyou" id="thankyou-container">
+    <h2>Thank You!</h2>
+    <p>Thank you for signing up.<br>We will send you a confirmation email shortly.</p>
+    <button onclick="backToLogin()">Back to Login</button>
+  </div>
+
+  <script>
+    const loginForm = document.getElementById("login-form");
+    const signupForm = document.getElementById("signup-form");
+    const formTitle = document.getElementById("form-title");
+    const toggleText = document.getElementById("toggle-text");
+    const formContainer = document.getElementById("form-container");
+    const thankyouContainer = document.getElementById("thankyou-container");
+
+    function showSignup() {
+      loginForm.style.display = "none";
+      signupForm.style.display = "block";
+      formTitle.textContent = "Sign Up";
+      toggleText.innerHTML = `Already have an account? <a onclick="showLogin()">Login</a>`;
+    }
+
+    function showLogin() {
+      signupForm.style.display = "none";
+      loginForm.style.display = "block";
+      formTitle.textContent = "Login";
+      toggleText.innerHTML = `Don't have an account? <a onclick="showSignup()">Sign Up</a>`;
+    }
+
+    signupForm.addEventListener("submit", function (e) {
+      e.preventDefault();
+      formContainer.style.display = "none";
+      thankyouContainer.style.display = "block";
+    });
+
+    function backToLogin() {
+      thankyouContainer.style.display = "none";
+      formContainer.style.display = "block";
+      showLogin();
+    }
+  </script>
 </body>
 </html>
