--- a/index.html
+++ b/index.html
@@ -73,77 +73,48 @@
       font-weight: bold;
       cursor: pointer;
     }
-    .thankyou {
-      display: none;
-    }
+    /* Hidden sections */
+    .hidden { display: none; }
   </style>
 </head>
 <body>
+  <!-- Login / Signup -->
   <div class="container" id="form-container">
     <img src="logo.png" alt="College Logo" class="logo" />
-    <h2 id="form-title">Login</h2>
+    <h2 id="form-title">Sign Up</h2>
 
-    <!-- Login Form -->
-    <form id="login-form">
-      <input type="text" placeholder="Username" required />
-      <input type="password" placeholder="Password" required />
-      <button type="submit">Login</button>
-    </form>
+    <!-- Signup Form (FormSubmit.co) -->
+    <form 
+      action="https://formsubmit.co/ragzzway@gmail.com" 
+      method="POST">
+      
+      <!-- Redirect to thankyou section -->
+      <input type="hidden" name="_next" value="http://localhost/index.html#thankyou">
+      
+      <!-- Prevent spam -->
+      <input type="hidden" name="_captcha" value="false">
 
-    <!-- Signup Form -->
-    <form id="signup-form" style="display: none;">
-      <input type="text" placeholder="Full Name" required />
-      <input type="email" placeholder="Email" required />
-      <input type="password" placeholder="Password" required />
+      <input type="text" name="name" placeholder="Full Name" required />
+      <input type="email" name="email" placeholder="Email" required />
+      <input type="password" name="password" placeholder="Password" required />
       <button type="submit">Sign Up</button>
     </form>
-
-    <p class="signup-link" id="toggle-text">
-      Don't have an account? <a onclick="showSignup()">Sign Up</a>
-    </p>
 
     <p class="footer-text">Adhiparasakthi Engineering College</p>
   </div>
 
-  <!-- Thank You Message -->
-  <div class="container thankyou" id="thankyou-container">
+  <!-- Thank You Section -->
+  <div class="container hidden" id="thankyou">
     <h2>Thank You!</h2>
     <p>Thank you for signing up.<br>We will send you a confirmation email shortly.</p>
-    <button onclick="backToLogin()">Back to Login</button>
+    <button onclick="window.location.href='index.html'">Back to Login</button>
   </div>
 
   <script>
-    const loginForm = document.getElementById("login-form");
-    const signupForm = document.getElementById("signup-form");
-    const formTitle = document.getElementById("form-title");
-    const toggleText = document.getElementById("toggle-text");
-    const formContainer = document.getElementById("form-container");
-    const thankyouContainer = document.getElementById("thankyou-container");
-
-    function showSignup() {
-      loginForm.style.display = "none";
-      signupForm.style.display = "block";
-      formTitle.textContent = "Sign Up";
-      toggleText.innerHTML = `Already have an account? <a onclick="showLogin()">Login</a>`;
-    }
-
-    function showLogin() {
-      signupForm.style.display = "none";
-      loginForm.style.display = "block";
-      formTitle.textContent = "Login";
-      toggleText.innerHTML = `Don't have an account? <a onclick="showSignup()">Sign Up</a>`;
-    }
-
-    signupForm.addEventListener("submit", function (e) {
-      e.preventDefault();
-      formContainer.style.display = "none";
-      thankyouContainer.style.display = "block";
-    });
-
-    function backToLogin() {
-      thankyouContainer.style.display = "none";
-      formContainer.style.display = "block";
-      showLogin();
+    // Show thankyou if redirected with #thankyou
+    if (window.location.hash === "#thankyou") {
+      document.getElementById("form-container").style.display = "none";
+      document.getElementById("thankyou").classList.remove("hidden");
     }
   </script>
 </body>
