--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
 <body>
   <!-- Login / Signup -->
   <div class="container" id="form-container">
-    <img src="logo.png" alt="College Logo" class="logo" />
+    <img src="logo.jpg" alt="College Logo" class="logo" />
     <h2 id="form-title">Sign Up</h2>
+    <h3>Adhiparasakthi Engineering College</h3>
 
     <!-- Signup Form (FormSubmit.co) -->
     <form 
